--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 .form{
-    background-color: aquamarine;
+    background-color: darkblue;
     max-width: 400px;
     margin: 12px auto;
     padding: 9px;
