--- a/index.css
+++ b/index.css
@@ -1,23 +1,29 @@
 *{
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif
+}
+body{
+    background: #345;
 }
 .form{
-    background-color: darkblue;
+    background-color: rgb(255, 255, 255);
     max-width: 400px;
     margin: 12px auto;
+    border-radius: 10px;
     padding: 9px;
+    
 }
 .inputs{
-    background-color: white;
+    background-color: rgb(247, 247, 255);
     width: 100%;
-    padding: 10px;
-    margin: 10px auto;
+    padding: 15px;
+    margin: 18px auto;
     border: 1px;
 }
 button{
     background-color: #355;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 10px;
     border: 0px;
     color: white;
